--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ body {
     padding-left: 2rem;
     padding-right: 2rem;
     margin-bottom: 2rem;
+    max-width: 500px;
   }
 
   .event::before {
