--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body {
     padding-left: 2rem;
     padding-right: 2rem;
     margin-bottom: 2rem;
-    max-width: 200px;
+    max-width: 500px;
   }
 
   /* Qui forziamo TUTTI i punti al centro */
@@ -109,7 +109,12 @@ body {
     transform: translateX(-50%) !important;
     right: auto !important;      /* cancella eventuali valori desktop */
   }
+
+  .event p {
+    max-width: 300px;
+  }
 }
+
 </style>
 </head>
 <body>
@@ -185,5 +190,3 @@ body {
 </div>
 </body>
 </html>
-
-
