--- a/index.html
+++ b/index.html
@@ -111,7 +111,11 @@ body {
   }
 
   .event p {
-    max-width: 300px;
+    max-width: 100px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    font-size: 0.95rem;
+    margin: 0;
   }
 }
 
@@ -190,3 +194,4 @@ body {
 </div>
 </body>
 </html>
+
