--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@ body {
     <p>Nasce Jean Henry Dunant</p>
   </div>
   <div class="event">
+    <h3>1853</h3>
+    <p>Inizio guerra di Crimea</p>
+  </div>
+  <div class="event">
+    <h3>1856</h3>
+    <p>Fine guerra di Crimea</p>
+  </div>
+  <div class="event">
     <h3>1859</h3>
     <p>Dunant arriva a Solferino</p>
   </div>
@@ -194,6 +202,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
