Modify timeline events in index.html
Updated timeline events and added new event for Florence Nightingale.

--- a/index.html
+++ b/index.html
@@ -132,12 +132,20 @@ body {
     <p>Inizio guerra di Crimea</p>
   </div>
   <div class="event">
+    <h3>21 ottobre 1854</h3>
+    <p>Florence Nightingale va in Crimea per offrire soccorso ai feriti</p>
+  </div>
+  <div class="event">
     <h3>1856</h3>
     <p>Fine guerra di Crimea</p>
   </div>
   <div class="event">
     <h3>1859</h3>
     <p>Dunant arriva a Solferino</p>
+  </div>
+  <div class="event">
+    <h3>1860</h3>
+    <p>Florence Nightingale pubblica <i>Notes on Nursing</i></p>
   </div>
   <div class="event">
     <h3>1862</h3>
@@ -202,6 +210,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
