Modify timeline events in index.html
Updated timeline events and added new entries.

--- a/index.html
+++ b/index.html
@@ -124,8 +124,16 @@ body {
 <body>
 <div class="timeline">
   <div class="event">
+    <h3>13 giugno 1815</h3>
+    <p>Nasce Ferdinando Palasciano a Capua</p>
+  </div>
+  <div class="event">
     <h3>8 maggio 1828</h3>
     <p>Nasce Jean Henry Dunant</p>
+  </div>
+  <div class="event">
+    <h3>1848</h3>
+    <p>Moti di Indipendenza in Italia</p>
   </div>
   <div class="event">
     <h3>1853</h3>
@@ -146,6 +154,10 @@ body {
   <div class="event">
     <h3>1860</h3>
     <p>Florence Nightingale pubblica <i>Notes on Nursing</i></p>
+  </div>
+  <div class="event">
+    <h3>1861</h3>
+    <p>Caduta dei Borboni e inizio del supporto pubblico delle idee umanitarie di Palasciano</i></p>
   </div>
   <div class="event">
     <h3>1862</h3>
@@ -171,6 +183,9 @@ body {
     <h3>1876</h3>
     <p>Viene adottato l&apos;emblema della mezzaluna rossa su fondo bianco</p>
   </div>
+  <div class="event">
+    <h3>28 novembre 1891</h3>
+    <p>Muore Ferdinando Palasciano</div>
   <div class="event">
     <h3>1910</h3>
     <p>Muore Jean Henry Dunant</p>
@@ -210,6 +225,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
