--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body {
     <p>Nasce Ferdinando Palasciano a Capua</p>
   </div>
   <div class="event">
-    <h3>8 maggio 1828</h3>
+    <h3 style="color:red">8 maggio 1828</h3>
     <p>Nasce Jean Henry Dunant</p>
   </div>
   <div class="event">
@@ -164,15 +164,15 @@ body {
     <p>Dunant pubblica <i>Souvenir de Solferino</i></p>
   </div>
   <div class="event">
-    <h3>1863</h3>
+    <h3 style="color:red">1863</h3>
     <p>Nasce il Comitato dei Cinque e di conseguenza la CR</p>
   </div>
   <div class="event">
-    <h3>15 giugno 1864</h3>
+    <h3 style="color:red">15 giugno 1864</h3>
     <p>Nasce la CRI</p>
   </div>
   <div class="event">
-    <h3>22 agosto 1864</h3>
+    <h3 style="color:red">22 agosto 1864</h3>
     <p>Prima Convenzione di Ginevra</p>
   </div>
   <div class="event">
@@ -199,7 +199,7 @@ body {
     <p>Fine Prima Guerra Mondiale</p>
   </div>
   <div class="event">
-    <h3>1919</h3>
+    <h3 style="color:red">1919</h3>
     <p>Nasce la Federazione Internazionale delle società di Croce Rossa</p>
   </div>
   <div class="event">
@@ -211,7 +211,7 @@ body {
     <p>Convenzioni di Ginevra</p>
   </div>
   <div class="event">
-    <h3>1965</h3>
+    <h3 style="color:red">1965</h3>
     <p>A Vienna vengono proclamati i <b>7 principi fondamentali</b> di Croce Rossa</p>
   </div>
   <div class="event">
@@ -225,6 +225,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
