--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ body {
   </div>
   <div class="event">
     <h3>1870/1871</h3>
-    <p>Istituzione dell&apos;Agenzia Centrale delle Ricerche del CICR</p>
+    <p>Istituzione dell&apos;Agenzia Centrale delle Ricerche del CICR; Guerra franco-prussiana</p>
   </div>
   <div class="event">
     <h3>1876</h3>
@@ -185,7 +185,16 @@ body {
   </div>
   <div class="event">
     <h3>28 novembre 1891</h3>
-    <p>Muore Ferdinando Palasciano</div>
+    <p>Muore Ferdinando Palasciano</p>
+  </div>
+  <div class="event">
+    <h3>1899</h3>
+    <p>Convenzioni dell&apos;Aja</p>
+  </div>
+  <div class="event">
+    <h3>1907</h3>
+    <p>Aggiornamento delle Convenzioni dell&apos;Aja</p>
+  </div>
   <div class="event">
     <h3>1910</h3>
     <p>Muore Jean Henry Dunant</p>
@@ -206,6 +215,12 @@ body {
     <h3>1923</h3>
     <p>Viene adottato l&apos;emblema del leone e sole rossi su fondo bianco</p>
   </div>
+  <h3>1929</h3>
+    <p>Convenzioni di Ginevra post-Prima Guerra Mondiale</p>
+  </div>
+  <h3>1948</h3>
+    <p>Dichiarazione universale dei diritti dell&apos;uomo</p>
+  </div>
   <div class="event">
     <h3>12 agosto 1949</h3>
     <p>Convenzioni di Ginevra</p>
@@ -213,6 +228,9 @@ body {
   <div class="event">
     <h3 style="color:red; background-color:yellow">1965</h3>
     <p>A Vienna vengono proclamati i <b>7 principi fondamentali</b> di Croce Rossa</p>
+  </div>
+  <h3>8 giugno 1977</h3>
+    <p>Vengono accorpati alle Convenzioni di Ginevra due Protocolli aggiuntivi</p>
   </div>
   <div class="event">
     <h3>1980</h3>
@@ -225,6 +243,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
