Restore and enhance timeline HTML structure
Restored and updated the HTML structure and styles for the timeline, including adding new events and adjusting styles for better responsiveness.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ body {
     <p>Fine guerra di Crimea</p>
   </div>
   <div class="event">
-    <h3>1859</h3>
+    <h3 style="color:red; background-color:yellow">24 giugno 1859</h3>
     <p>Dunant arriva a Solferino</p>
   </div>
   <div class="event">
@@ -166,6 +166,10 @@ body {
   <div class="event">
     <h3 style="color:red; background-color:yellow">1863</h3>
     <p>Nasce il Comitato dei Cinque e di conseguenza la CR</p>
+  </div>
+  <div class="event">
+    <h3 style="color:red; background-color:yellow">26 ottobre 1863</h3>
+    <p>Il Comitato dei Cinque indice la prima Conferenza Internazionale</p>
   </div>
   <div class="event">
     <h3 style="color:red; background-color:yellow">15 giugno 1864</h3>
@@ -215,9 +219,11 @@ body {
     <h3>1923</h3>
     <p>Viene adottato l&apos;emblema del leone e sole rossi su fondo bianco</p>
   </div>
+  <div class="event">
   <h3>1929</h3>
     <p>Convenzioni di Ginevra post-Prima Guerra Mondiale</p>
   </div>
+  <div class="event">
   <h3>1948</h3>
     <p>Dichiarazione universale dei diritti dell&apos;uomo</p>
   </div>
@@ -229,6 +235,7 @@ body {
     <h3 style="color:red; background-color:yellow">1965</h3>
     <p>A Vienna vengono proclamati i <b>7 principi fondamentali</b> di Croce Rossa</p>
   </div>
+  <div class="event">
   <h3>8 giugno 1977</h3>
     <p>Vengono accorpati alle Convenzioni di Ginevra due Protocolli aggiuntivi</p>
   </div>
@@ -243,7 +250,6 @@ body {
 </div>
 </body>
 </html>
-
 
 
 
