Refactor index.html for improved structure and style

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>Timeline Verticale</title>
 <style>
 body {
@@ -250,6 +250,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
