--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Timeline Verticale</title>
 <style>
 body {
@@ -15,6 +15,7 @@ body {
 .timeline {
   position: relative;
   max-width: 700px;
+  width: 100%;
   margin: 0 auto;
   padding: 2rem 0;
 }
@@ -250,7 +251,6 @@ body {
 </div>
 </body>
 </html>
-
 
 
 
