Refactor HTML structure and styles for timeline

--- a/index.html
+++ b/index.html
@@ -94,13 +94,21 @@ body {
 
 /* RESPONSIVE: mobile */
 @media screen and (max-width: 600px) {
+  body{
+    padding: 1rem;
+  }
+
+  .timeline{
+    padding: 1rem 0;
+  }
+
   .event {
     width: 100% !important;
     left: 0 !important;
     text-align: left !important;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    margin-bottom: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-bottom: 1rem;
     max-width: 500px;
   }
 
