--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Timeline Verticale</title>
 <style>
+html, body{
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Segoe UI", sans-serif;
   background: #f9f9f9;
@@ -93,7 +98,7 @@ body {
 }
 
 /* RESPONSIVE: mobile */
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   body{
     padding: 1rem;
   }
@@ -259,7 +264,6 @@ body {
 </div>
 </body>
 </html>
-
 
 
 
